--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -19,43 +19,23 @@
   <property name="windowTitle">
    <string>Qt VK</string>
   </property>
-  <widget class="QListWidget" name="chatList">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>111</width>
-     <height>571</height>
-    </rect>
-   </property>
-  </widget>
-  <widget class="QListWidget" name="chatHistory">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>30</y>
-     <width>461</width>
-     <height>461</height>
-    </rect>
-   </property>
-  </widget>
   <widget class="QPushButton" name="sendButton">
    <property name="geometry">
     <rect>
-     <x>480</x>
-     <y>500</y>
+     <x>540</x>
+     <y>520</y>
      <width>88</width>
-     <height>71</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
-    <string>Send</string>
+    <string>Отправить</string>
    </property>
   </widget>
   <widget class="QTextEdit" name="textEdit">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>160</x>
      <y>490</y>
      <width>371</width>
      <height>81</height>
@@ -65,15 +45,37 @@
   <widget class="QLabel" name="username">
    <property name="geometry">
     <rect>
-     <x>120</x>
+     <x>170</x>
      <y>0</y>
      <width>331</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
-    <string>Name</string>
+    <string>ChatName</string>
    </property>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>9</y>
+     <width>160</width>
+     <height>561</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="chatList"/>
+  </widget>
+  <widget class="QWidget" name="verticalLayoutWidget_2">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>20</y>
+     <width>451</width>
+     <height>461</height>
+    </rect>
+   </property>
+   <layout class="QVBoxLayout" name="chatHistory"/>
   </widget>
  </widget>
  <resources/>
